# EmbCV

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  CURRENTERRORS.txt  README.md  add_sources.cmake  clean_all.sh  compile_blob_example.sh  picout.csv  run_compiled_blob_example.sh
.externalToolBuilders/: Scripted_Builder.launch  Scripted_Cleaner.launch
examples/: CMakeLists.txt  blob_label_example.c
examples/blob_label/: CMakeLists.txt  README.md  blob_label_example.c  jconfig.h  openimggreyscale.py  tempcsv.txt
examples/blob_label/inc/: libjpeg_declarations.h
examples/helpers/print_to_csv/: CMakeLists.txt  print_to_csv.c
examples/helpers/print_to_csv/inc/: print_to_csv.h
examples/inc/: print_to_csv.h
inc/: base_methods.h  blob_detect_methods.h
src/: CMakeLists.txt  blob_detect_methods.c
src/base/: CMakeLists.txt  base_methods.c
src/base/inc/: base_methods.h
src/blob_label/: CMakeLists.txt  README.md  blob_label_methods.c
src/blob_label/inc/: blob_label_methods.h
